[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sgl-jax"
version = "0.1.0"
description = "JAX backend for SGL"
authors = [
    { name = "SGL Team" }
]
requires-python = ">=3.8"

dependencies = [
    "jax>=0.4.13",
    "flax>=0.7.4",
    "fastapi",
    "psutil",
    "pyzmq>=25.1.2",
    "uvicorn",
    "uvloop",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
]

[tool.setuptools.packages.find]
exclude = [
    "assets*",
    "benchmark*",
    "docs*",
    "dist*",
    "playground*",
    "scripts*",
    "tests*",
]

[tool.wheel]
exclude = [
    "assets*",
    "benchmark*",
    "docs*",
    "dist*",
    "playground*",
    "scripts*",
    "tests*",
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100 